--- a/config/database.yml
+++ b/config/database.yml
@@ -25,8 +25,8 @@ production:
   adapter: postgresql
   encoding: unicode
   pool: 5
-  database: test_ly2l
-  username: test_ly2l_user
+  database: test2_45pa
+  username: test2_45pa_user
   password: <%= ENV['MYSITE_DATABASE_PASSWORD'] %>
   url: <%= ENV['DATABASE_URL'] %>
   #database: storage/production.sqlite3
