--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,7 @@
 databases:
-  - name: GameQuest
-    databaseName: GameQuest
-    user: GameQuest
+  - name: test2
+    databaseName: test2_45pa
+    user: test2_45pa_user
     plan: free
 
 services:
@@ -15,7 +15,7 @@ services:
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: GameQuest
+          name: test2
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
